SVGIO: tdf#97941: Don't double tspan fontsize

Same as in 701324a1e1f7e0c181ff1a50956ced686785ea53

Change-Id: I531bef4821008ef71951506c133f999b9ab4f4ff